--- a/hosted/index.html
+++ b/hosted/index.html
@@ -54,7 +54,7 @@
       }
       
       #score {
-        font-size: 3em;
+        font-size: 1.5em;
         width: 66%;
         margin: auto;
       }
@@ -89,7 +89,7 @@
 <body>
   
   
-  <div id='score'></div>
+  <div id='score'>Instructions: When a letter appears, hold it down on your keyboard until you pass the potato (automatically)!</div>
   
   
   <div id="signIn">
