--- a/hosted/index.html
+++ b/hosted/index.html
@@ -89,7 +89,7 @@
 <body>
   
   
-  <div id='score'>Instructions: When a letter appears, hold it down on your keyboard until you pass the potato (automatically)!</div>
+  <div id='score'>Instructions: If you have the potato, when a letter appears, press it before the line hits the bottom! Press Space to pass to the next player!</div>
   
   
   <div id="signIn">
